--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,9 +1,11 @@
 .mat-toolbar
-  display: flex
-  justify-content: space-between
+  display: grid
+  grid-template-columns: 50px auto 100px
 
 .branding 
   span
     font-size: 1.5rem
     margin-left: 1rem
     color: #fff
+
+ 
