add functions in stock entry and products

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,11 +1,16 @@
 .mat-toolbar
-  display: grid
-  grid-template-columns: 50px auto 100px
+  width: 100%
+  position: relative
 
 .branding 
   span
     font-size: 1.5rem
     margin-left: 1rem
     color: #fff
-
- 
+.right
+  position: absolute
+  right: 0
+  top: 0
+  height: 100%
+  button
+    height: 100%
