--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,5 +7,6 @@
     <p>You get a lemon, you get a lemon, you get a lemon...</p>
   </ng-template>
   
-  <button mat-raised-button color="accent" routerLink="/manager">Login As Manager</button>
+  <button mat-raised-button color="accent" routerLink="/login">Login</button>
+  <button mat-raised-button color="accent" routerLink="/signup">Sign up</button>
 </div>
