--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <mat-toolbar color='primary'>
+  <div class='side-nav'>
+    
+  </div>
+
   <button mat-icon-button><mat-icon>menu</mat-icon></button>
   <div class='branding'>
     <a mat-button routerLink='/manager'>
