--- a/src/app/inventory/stock-entry/stock-entry.component.html
+++ b/src/app/inventory/stock-entry/stock-entry.component.html
@@ -1,1 +1,11 @@
-<p>stock-entry works!</p>
+<div class='wrapper'>
+  <app-stock-edit></app-stock-edit>
+  <mat-divider></mat-divider>
+
+  <ul class='list-group'>
+    <a class='list-group-item' *ngFor="let ingredient of ingredients">
+      {{ ingredient.name }} ({{ ingredient.amount }})
+    </a>
+  </ul>
+</div>
+
