--- a/src/sass/_defaults.sass
+++ b/src/sass/_defaults.sass
@@ -1,4 +1,13 @@
-*, *:before, *:after 
+*, *:before, *:after
  box-sizing: border-box
  margin:0
  padding:0
+
+.active-link
+  background-color: lighten($lemon-accent, 20%)
+
+img
+  display: block
+  width: 100%
+  height: 100%
+  object-fit: cover
