--- a/src/app/inventory/products/product-detail/product-detail.component.html
+++ b/src/app/inventory/products/product-detail/product-detail.component.html
@@ -1,4 +1,3 @@
-
 <mat-card>
   <mat-card-header>
     <mat-card-title>{{ product.name }}</mat-card-title>
@@ -16,7 +15,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button type="button" color="primary" (click)='onAddToStock()'>Add to stock entry</button>
-    <button mat-raised-button type="button" color="accent">Edit</button>
-    <button mat-raised-button type="button" color="warn">Delete</button>
+    <button mat-raised-button type="button" color="accent" (click)='onEditProduct()'>Edit</button>
+    <button mat-raised-button type="button" color="warn" (click)='onDeleteProduct()'>Delete</button>
   </mat-card-actions>
 </mat-card>
