--- a/src/app/inventory/products/product-list/product-item/product-item.component.sass
+++ b/src/app/inventory/products/product-list/product-item/product-item.component.sass
@@ -1,3 +1,5 @@
+@import src/sass/vars
+
 .list-wrapper
   border-radius: 10px
   width: 100%
@@ -19,9 +21,9 @@
     flex: 1
     object-fit: cover
 
-img
-  display: block
-  width: 100%
-  height: 100%
-  object-fit: cover
-  
+a
+  text-decoration: none
+  color: #000
+
+a.active
+  border: 2px solid $lemon-primary
