--- a/src/app/inventory/products/product-list/product-list.component.html
+++ b/src/app/inventory/products/product-list/product-list.component.html
@@ -1,8 +1,9 @@
-<button mat-raised-button type="button" color="primary">New Product</button>
+<button mat-raised-button type="button" color="primary" (click)='onNewProduct()'>New Product</button>
 <mat-divider></mat-divider>
 
 <app-product-item 
-  *ngFor="let productEl of products" 
-  [product]='productEl'>
+  *ngFor="let productEl of products; let i = index" 
+  [product]='productEl'
+  [index]='i'>
 </app-product-item>
 
