--- a/src/app/inventory/stock-entry/stock-edit/stock-edit.component.html
+++ b/src/app/inventory/stock-entry/stock-edit/stock-edit.component.html
@@ -1,17 +1,30 @@
-<form>
+<form [formGroup]='stockForm' (ngSubmit)='onSubmit(stockForm)'>
   <mat-form-field appearance='outline'>
     <mat-label>Name</mat-label>
-    <input matInput type='text' placeholder="Ex. Pizza" #nameInput>
+    <input matInput type='text' placeholder="Ex. Pizza" formControlName='name' pattern='[a-zA-Z ]*'>
   </mat-form-field>
   <mat-form-field appearance='outline'>
     <mat-label>Amount</mat-label>
-    <input matInput type='number' min='0' placeholder="Ex. 3" #amountInput>
+    <input matInput type='number' min='0' placeholder="Ex. 3" formControlName='amount'>
   </mat-form-field>
 
   <div class='btn-groups'>
-    <button mat-flat-button color="primary" type='button' (click)='onAddIngredient()'>Add</button>
-    <button mat-flat-button color="warn" type='button'>Delete</button>
-    <button mat-flat-button color="accent" type='button'>Clear</button>
+    <button mat-flat-button color="primary"
+            type='submit'
+            [disabled]='!stockForm.valid'>
+            {{ editMode ? 'Update' : 'Add' }}
+    </button>
+    <button mat-flat-button color="warn"
+            type='button'
+            (click)='onDelete()'
+            *ngIf='editMode'>
+            Delete
+    </button>
+    <button mat-flat-button color="accent"
+            type='button'
+            (click)='onClear()'>
+            Clear
+    </button>
   </div>
 
 </form>
