--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -5,7 +5,7 @@
 
   <mat-card>
     <mat-card-header>
-      <mat-card-title>Sign Up</mat-card-title>
+      <mat-card-title><h2>Sign Up</h2></mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form [formGroup]='signupForm' (ngSubmit)='onSubmit()' *ngIf="!isLoading">
@@ -28,6 +28,7 @@
           </mat-form-field>
         </div>
         <button mat-raised-button type="submit" color="primary" [disabled]="!signupForm.valid">Sign up</button>
+        <button mat-stroked-button type="button" (click)='onSwitch()'>Already with us? Sign in</button>
       </form>
     </mat-card-content>
   </mat-card>
