--- a/src/app/inventory/products/product-list/product-list.component.html
+++ b/src/app/inventory/products/product-list/product-list.component.html
@@ -1,8 +1,26 @@
-<button mat-raised-button type="button" color="primary" (click)='onNewProduct()'>New Product</button>
+<div class='top'>
+  <button mat-raised-button type="button" color="primary" (click)='onNewProduct()'>New Product</button>
+  <div class='save-fetch-menu'>
+    <button mat-icon-button [matMenuTriggerFor]='menu'>
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu='matMenu'>
+      <button mat-menu-item (click)='onSaveData()'>
+        <mat-icon>save</mat-icon>
+        <span>Save data</span>
+      </button>
+      <button mat-menu-item (click)='onFetchData()'>
+        <mat-icon>cached</mat-icon>
+        <span>Fetch data</span>
+      </button>
+    </mat-menu>
+  </div>
+</div>
+
 <mat-divider></mat-divider>
 
-<app-product-item 
-  *ngFor="let productEl of products; let i = index" 
+<app-product-item
+  *ngFor="let productEl of products; let i = index"
   [product]='productEl'
   [index]='i'>
 </app-product-item>
